# libtrkcvt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  main.c
.github/workflows/: build-release.yml
include/: conv.h  crc.h  effects.h  envcheck.h  ext.h  file.h  header.h  log.h  main.h  order.h  parapnt.h  pattern.h  s3m.h  sample.h  sample_header.h  song_header.h  stm.h  struct.h  valid.h
include/fmt/: s3m.h  stm.h  stx.h
include/frontend/: main.h
src/: crc.c  crc.h  effects.c  envcheck.h  ext.h  file.c  header.c  header.h  log.c  main.c  main.h  orders.c  parapnt.c  parapnt.h  pattern.c  pattern.h  s3m.h  sample.c  sample.h  sample_header.c  song_header.c  stm.h  stx.h  tostm.c  tostx.c  valid.c
src/frontend/: main.c  tostx.c
